--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-REACT_APP_AUTH0_DOMAIN=dev-tpirtnadvtk256kl.us.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=BMlPgSfhovoQgWXI4f6uny0ABZMd43gO
+REACT_APP_AUTH0_DOMAIN= dev-tpirtnadvtk256kl.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID= BMlPgSfhovoQgWXI4f6uny0ABZMd43gO
